--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - "2.6"
 install:
   - if ! [[ $TRAVIS_PYTHON_VERSION > '2.6' ]]; then pip install unittest2 ; fi
-  - pip install -r dev_requirements.txt
+  - pip install --install-option='--no-cython-compile' -r dev_requirements.txt
   - python setup.py develop
 script:
   - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then python -m unittest2.__main__ discover -v tests ; fi
