--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: python
 python:
   - "3.4"
   - "3.3"
-  - "3.2"
   - "2.7"
 install:
-  - pip install -r dev_requirements.txt
+  - pip install --install-option='--no-cython-compile' -r dev_requirements.txt
+  - pip install ipython
   - python setup.py develop
 script:
   - python -m unittest discover -v tests
