Update version to 2.0, include IPython >=0.13 as a hard dependency, add brett.olsen@gmail.com as maintainer

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ script:
   - python -m unittest discover -v tests
 notifications:
   email:
+      - brett.olsen+travis-ci@gmail.com
       - robert.kern+travis-ci@gmail.com
