--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
   - "3.3"
   - "2.7"
 install:
-  - pip install --install-option='--no-cython-compile' -r dev_requirements.txt
-  - pip install ipython
+  - pip install --install-option='--no-cython-compile' Cython
+  - pip install -r dev_requirements.txt
   - python setup.py develop
 script:
   - python -m unittest discover -v tests
