--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ python:
   - "3.4"
   - "3.3"
   - "2.7"
+matrix:
+  fast_finish: true
+  allow_failures:
+    - python: "nightly"
+    - python: "3.7-dev"
+    - python: "3.6-dev"
 install:
   - pip install --install-option='--no-cython-compile' Cython
   - pip install -r dev_requirements.txt
