--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,6 @@ include LICENSE_Python.txt
 include README.rst
 include python25.pxd
 include timers.h
-include _line_profiler.c
+exclude _line_profiler.c
 include unset_trace.h
 recursive-include tests *.py
