Run Python 3.7 in allow_failures mode pending
#153 or similar is __required__ to be compatible with Python 3.7.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
   allow_failures:
     - python: "nightly"
     - python: "3.8-dev"
+    - python: "3.7"
 install:
   - pip install --install-option='--no-cython-compile' Cython
   - pip install -r dev_requirements.txt
