--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,4 @@
 [build-system]
-requires = ["setuptools", "wheel", "Cython"]
+requires = ["setuptools>=41.0.1", "wheel",  "Cython", "scikit-build>=0.9.0", "cmake", "ninja"]
+# build-backend = "setuptools.build_meta"  commented out to disable pep517
+### build-backend = "scikit-build"
