--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,13 +1,13 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: python_test
 
 on:
   push:
     branches: [ master, dev/github_actions ]
-  #pull_request:
-  #  branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
