--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -52,9 +52,10 @@ jobs:
     - name: Test Wheel
       run: |
         python run_tests.py
-    - name: Upload coverage
-      run: |
-        codecov --file tests/.coverage
+    - name: Codecov Upload
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./tests/coverage.xml
     
 #__doc__: |
 #    # How to run locally
