--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,11 +2,13 @@ include *.md
 include *.rst
 include *.py
 include *.txt
+include *.toml
 include run_tests.sh
 recursive-include requirements *.txt
 recursive-include tests *.py
 recursive-include line_profiler *.txt
 recursive-include line_profiler *.pyx
+recursive-include line_profiler *.pxd
 recursive-include line_profiler *.pyd
 recursive-include line_profiler *.c
 recursive-include line_profiler *.h
