Rotate in new PyUtils GPG Key: 2A290272C174D28EA9CA48E9D7224DAF0347B114
Add test deploy action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -174,6 +174,7 @@ jobs:
         path: ./wheelhouse/*.whl
 
   deploy:
+    # Publish on the real PyPI
     name: Uploading to PyPi
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
@@ -192,14 +193,10 @@ jobs:
         shell: bash
         run: ls -la dist
       - name: Sign and Publish
-        env:
-          # Toggle comments to publish to the test pypi instead of the real one
-          #TWINE_REPOSITORY_URL: https://upload.pypi.org/legacy/
-          #PYUTILS_TWINE_USERNAME: ${{ secrets.PYUTILS_TWINE_USERNAME }}
-          #PYUTILS_TWINE_PASSWORD: ${{ secrets.PYUTILS_TWINE_PASSWORD }}
-          TEST_TWINE_REPOSITORY_URL: https://test.pypi.org/legacy/
-          PYUTILS_TEST_TWINE_USERNAME: ${{ secrets.PYUTILS_TEST_TWINE_USERNAME }}
-          PYUTILS_TEST_TWINE_PASSWORD: ${{ secrets.PYUTILS_TEST_TWINE_PASSWORD }}
+        #env:
+        #  TWINE_REPOSITORY_URL: https://upload.pypi.org/legacy/
+        #  PYUTILS_TWINE_USERNAME: ${{ secrets.PYUTILS_TWINE_USERNAME }}
+        #  PYUTILS_TWINE_PASSWORD: ${{ secrets.PYUTILS_TWINE_PASSWORD }}
         run: |
           ls -al
           GPG_EXECUTABLE=gpg
@@ -210,7 +207,7 @@ jobs:
           GLKWS=$PYUTILS_CI_GITHUB_SECRET openssl enc -aes-256-cbc -pbkdf2 -md SHA512 -pass env:GLKWS -d -a -in dev/cci_public_gpg_key.pgp.enc | $GPG_EXECUTABLE --import 
           GLKWS=$PYUTILS_CI_GITHUB_SECRET openssl enc -aes-256-cbc -pbkdf2 -md SHA512 -pass env:GLKWS -d -a -in dev/cci_gpg_owner_trust.enc | $GPG_EXECUTABLE --import-ownertrust
           GLKWS=$PYUTILS_CI_GITHUB_SECRET openssl enc -aes-256-cbc -pbkdf2 -md SHA512 -pass env:GLKWS -d -a -in dev/cci_secret_gpg_key.pgp.enc | $GPG_EXECUTABLE --import 
-          $GPG_EXECUTABLE --list-keys  || echo "first one fails for some reason"
+          $GPG_EXECUTABLE --list-keys  || echo "first invocation of gpg creates directories and returns 1"
           $GPG_EXECUTABLE --list-keys  
           MB_PYTHON_TAG=$(python -c "import setup; print(setup.MB_PYTHON_TAG)")
           VERSION=$(python -c "import setup; print(setup.VERSION)") 
@@ -219,19 +216,6 @@ jobs:
           pip install requests[security] twine --user
           GPG_KEYID=$(cat dev/public_gpg_key)
           echo "GPG_KEYID = '$GPG_KEYID'"
-          #
-          #export TWINE_REPOSITORY_URL=https://test.pypi.org/legacy/
-          #export PYUTILS_TEST_TWINE_USERNAME=${{ secrets.PYUTILS_TEST_TWINE_USERNAME }}
-          #export PYUTILS_TEST_TWINE_PASSWORD=${{ secrets.PYUTILS_TEST_TWINE_PASSWORD }}
-          #MB_PYTHON_TAG=$MB_PYTHON_TAG \
-          #    DO_GPG=True GPG_KEYID=$GPG_KEYID \
-          #    TWINE_REPOSITORY_URL=${TWINE_REPOSITORY_URL} \
-          #    TWINE_USERNAME=$PYUTILS_TEST_TWINE_USERNAME \
-          #    TWINE_PASSWORD=$PYUTILS_TEST_TWINE_PASSWORD \
-          #    GPG_EXECUTABLE=$GPG_EXECUTABLE \
-          #    DO_UPLOAD=True \
-          #    DO_TAG=False ./publish.sh
-          #
           export TWINE_REPOSITORY_URL=https://upload.pypi.org/legacy/
           export PYUTILS_TWINE_USERNAME=${{ secrets.PYUTILS_TWINE_USERNAME }}
           export PYUTILS_TWINE_PASSWORD=${{ secrets.PYUTILS_TWINE_PASSWORD }}
@@ -242,6 +226,62 @@ jobs:
               GPG_EXECUTABLE=$GPG_EXECUTABLE \
               DO_UPLOAD=True \
               DO_TAG=False ./publish.sh 
+
+  test_deploy:
+    # Publish on the test PyPI
+    name: Uploading to Test PyPi
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && (startsWith(github.event.ref, 'refs/heads/main') || startsWith(github.event.ref, 'refs/heads/master'))
+    needs: [build_and_test_wheels, build_and_test_sdist]
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v2
+
+      - name: Download wheels and sdist
+        uses: actions/download-artifact@v2
+        with:
+          name: wheels
+          path: dist
+
+      - name: Show files to upload
+        shell: bash
+        run: ls -la dist
+      - name: Sign and Publish
+        #env:
+        #  # Toggle comments to publish to the test pypi instead of the real one
+        #  TEST_TWINE_REPOSITORY_URL: https://test.pypi.org/legacy/
+        #  PYUTILS_TEST_TWINE_USERNAME: ${{ secrets.PYUTILS_TEST_TWINE_USERNAME }}
+        #  PYUTILS_TEST_TWINE_PASSWORD: ${{ secrets.PYUTILS_TEST_TWINE_PASSWORD }}
+        run: |
+          ls -al
+          GPG_EXECUTABLE=gpg
+          $GPG_EXECUTABLE --version
+          openssl version
+          $GPG_EXECUTABLE --list-keys
+          export PYUTILS_CI_GITHUB_SECRET=${{ secrets.PYUTILS_CI_GITHUB_SECRET }}
+          GLKWS=$PYUTILS_CI_GITHUB_SECRET openssl enc -aes-256-cbc -pbkdf2 -md SHA512 -pass env:GLKWS -d -a -in dev/cci_public_gpg_key.pgp.enc | $GPG_EXECUTABLE --import 
+          GLKWS=$PYUTILS_CI_GITHUB_SECRET openssl enc -aes-256-cbc -pbkdf2 -md SHA512 -pass env:GLKWS -d -a -in dev/cci_gpg_owner_trust.enc | $GPG_EXECUTABLE --import-ownertrust
+          GLKWS=$PYUTILS_CI_GITHUB_SECRET openssl enc -aes-256-cbc -pbkdf2 -md SHA512 -pass env:GLKWS -d -a -in dev/cci_secret_gpg_key.pgp.enc | $GPG_EXECUTABLE --import 
+          $GPG_EXECUTABLE --list-keys  || echo "first invocation of gpg creates directories and returns 1"
+          $GPG_EXECUTABLE --list-keys  
+          MB_PYTHON_TAG=$(python -c "import setup; print(setup.MB_PYTHON_TAG)")
+          VERSION=$(python -c "import setup; print(setup.VERSION)") 
+          pip install twine
+          pip install six pyopenssl ndg-httpsclient pyasn1 -U --user
+          pip install requests[security] twine --user
+          GPG_KEYID=$(cat dev/public_gpg_key)
+          echo "GPG_KEYID = '$GPG_KEYID'"
+          export TWINE_REPOSITORY_URL=https://test.pypi.org/legacy/
+          export PYUTILS_TEST_TWINE_USERNAME=${{ secrets.PYUTILS_TEST_TWINE_USERNAME }}
+          export PYUTILS_TEST_TWINE_PASSWORD=${{ secrets.PYUTILS_TEST_TWINE_PASSWORD }}
+          MB_PYTHON_TAG=$MB_PYTHON_TAG \
+              DO_GPG=True GPG_KEYID=$GPG_KEYID \
+              TWINE_REPOSITORY_URL=${TWINE_REPOSITORY_URL} \
+              TWINE_USERNAME=$PYUTILS_TEST_TWINE_USERNAME \
+              TWINE_PASSWORD=$PYUTILS_TEST_TWINE_PASSWORD \
+              GPG_EXECUTABLE=$GPG_EXECUTABLE \
+              DO_UPLOAD=True \
+              DO_TAG=False ./publish.sh
        
 ###
 # Unfortunately we cant (yet) use the yaml docstring trick here
