--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -238,7 +238,8 @@ jobs:
     # Publish on the test PyPI
     name: Uploading to Test PyPi
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (startsWith(github.event.ref, 'refs/heads/main') || startsWith(github.event.ref, 'refs/heads/master'))
+    #if: github.event_name == 'push' && (startsWith(github.event.ref, 'refs/heads/main') || startsWith(github.event.ref, 'refs/heads/master'))
+    if: github.event_name == 'push' && !startsWith(github.event.ref, 'refs/tags')
     needs: [build_and_test_wheels, build_and_test_sdist]
     steps:
       - name: Checkout source
